--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,55 +6,84 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
   <title>Estudio Contable Rodriguez Seguer</title>
 </head>
 
 <body>
   <header>
-    <nav class="header__nav">
-      <img src="recursos/favicon-16x16.png" width="20px" alt="">
-      <ul>
-        <li class="header__links"><a href="../index.html">Inicio</a></li>
-        <li class="header__links"><a href="servicios.html">Servicios</a></li>
-        <li class="header__links"><a href="nosotros.html">Nosotros</a></li>
-        <li class="header__links"><a href="acceso-clientes.html">Acceso clientes</a></li>
-        <li class="header__links"><a href="contacto.html">Contactos</a></li>
-      </ul>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-2 fondo-rosa">
+      <div class="container-fluid">
+          
+      <a class="navbar-brand" href="#"><img src="../recursos/favicon-16x16.png" width="25px" alt="logo estudio"></a>
+          
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+              <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link text-light" href="./servicios.html">Servicios</a>
+              <a class="nav-link text-light" href="./nosotros.html">Nosotros</a>
+              <a class="nav-link text-light" href="./acceso-clientes.html">Acceso clientes</a>
+              <a class="nav-link text-light" href="./contacto.html">Contactos</a>
+          </div>
+          </div>
+      </div>
+  </nav>
   </header>
+  
   <main>
     <article>
       <section class="mensajemotivador">
         <h1 class="mensajemotivador__bienvenida">Estaremos encantados de atenderte</h1>
       </section>
-      <section class="formulario">
+      <section class="formulario mb-4">
         <form class= "formulario__form"action="post">
           <div class="formulario__uno">
-            <label for="inputnombre">nombre</label>
-            <input type="text" placeholder="nombre" id="inputnombre">
-            <label for="inputcorreo">correo</label>
-            <input type="email" placeholder="correo" id="inputcorreo">
-            <label for="inputtelefono">telefono</label>
-            <input type="number" placeholder="telefono" id="inputtelefono">
+            <div class="mb-4">
+              <label for="nameInput" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nameInput" placeholder="Nombre">
+            </div>
+
+            <div class="mb-4">
+              <label for="emailInput" class="form-label">Email</label>
+              <input type="email" id="emailInput" class="form-control" placeholder="ejemplo@ejemplo.com">
+            </div>
+
+            <div class="mb-4">
+              <label for="phoneInput" class="form-label">Telefono</label>
+              <input type="number" id="phoneInput" class="form-control" placeholder="123456789">
+            </div>
           </div>
-          <div class="formulario__dos">
-            <label for="mensaje">Inserte su mensaje aqui</label>
-            <textarea id="mensaje" rows="10"></textarea>
-            <input type="button" value="Enviar Mensaje" class="formulario__boton">
+
+          <div class="formulario__dos mt-5">
+            <label for="mensaje" class="mb-2">Inserte su mensaje aqui</label>
+
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="" id="floatingTextarea" style="height: 100px"></textarea>
+              <label for="floatingTextarea">Mensaje</label>
+            </div>
+            <button type="submit" class="btn btn-primary mt-4 boton-rosa w-100">Siguiente</button>
           </div>
+
       </section>
       </form>
     </article>
   </main>
-  <footer>
+  
+  <footer class="fixed-bottom">
     <div class="footer__infofinal">
-      <p>Servicios Online-Sedes en CABA</p>
+        <p>Servicios Online-Sedes en CABA</p>
     </div>
     <div class="footer__redes">
-      <p><a href="*">Facebook</a> - <a href="*">Instagram</a> - <a href="*">Twitter</a></p>
-    </div>
-  </footer>
+      <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a href="https://www.instagram.com/" class="linkVisited">Instagram</a> - <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" class="linkVisited">Twitter</a></p>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
