--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <title>Estudio Contable Rodriguez Seguer</title>
@@ -12,48 +14,63 @@
 
 <body>
     <header>
-        <nav class="header__nav">
-            <img src="recursos/favicon-16x16.png" width="20px" alt="">
-            <ul>
-                <li class="header__links"><a href="../index.html">Inicio</a></li>
-                <li class="header__links"><a href="servicios.html">Servicios</a></li>
-                <li class="header__links"><a href="nosotros.html">Nosotros</a></li>
-                <li class="header__links"><a href="acceso-clientes.html">Acceso clientes</a></li>
-                <li class="header__links"><a href="contacto.html">Contactos</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-2 fondo-rosa">
+            <div class="container-fluid">
+
+                <a class="navbar-brand" href="#"><img src="../recursos/favicon-16x16.png" width="25px" alt="logo estudio"></a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link text-light" href="./servicios.html">Servicios</a>
+                        <a class="nav-link text-light" href="./nosotros.html">Nosotros</a>
+                        <a class="nav-link text-light" href="./acceso-clientes.html">Acceso clientes</a>
+                        <a class="nav-link text-light" href="./contacto.html">Contactos</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <section class="quienessomos">
             <article class="quienessomos__todos">
-                <h1 class="quienessomos__titulo"> QUIENES SOMOS?</h1>
-                <div class="quienessomos__contenido">
-                    <div class="quienessomos__foto">
-                        <img src="../recursos/staff.jpeg" alt="staff" srcset="">
-                    </div>
-                    <div class="quienessomos__infogra">
-                        <h2> Mi nombre es Graciela, tengo 59 años, soy contadora de la
-                            UNLAM.
-                            Hace
-                            20 años, me abri mi propio estudio contable,soy la responsable del area de Auditoria. Mi
-                            staff formado por Fernanda,Agustina y Julian son los que se encargan al area de sueldos y
-                            por
-                            ultimo,Magali y Macarena componen al area de impuestos. Cuento con un grupo de empleados
-                            sumamente
-                            eficientes y responsables a la hora de su realizar su trabajo.</h2>
+                <h1 class="text-center m-0 h1 titulo-rosa"> QUIENES SOMOS?</h1>
+
+
+                <div class="container-fluid">
+                    <div class="quienessomos__contenido row gy-4">
+                        <div class="quienessomos__foto col-12 col-md-6">
+                            <img src="../recursos/staff.jpeg" class="img-thumbnail img-size" alt="staff" srcset="">
+                        </div>
+
+                        <div class="fs-5  col-12 col-md-6">
+                            <p> Mi nombre es Graciela, tengo 59 años, soy contadora de la
+                                UNLAM.Hace 20 años, me abri mi propio estudio contable,soy la responsable del area de asesoramiento y liquidacion de impuestos. Mi staff formado por Fernanda,Agustina y Julian son los que se encargan del area de regularizacion fiscal y por ultimo,Magali y Macarena componen el area de inspecciones y requerimientos. Cuento con un grupo de empleados sumamente eficientes y responsables a la hora de su realizar su trabajo. Todo mi equipo tiene mas de 3 años trabajando conmigo y construyendo este proyecto que soñe durante muchisimo tiempo.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </article>
         </section>
     </main>
-    <footer>
+    <footer class="fixed-bottom">
         <div class="footer__infofinal">
             <p>Servicios Online-Sedes en CABA</p>
         </div>
         <div class="footer__redes">
-            <p><a href="*">Facebook</a> - <a href="*">Instagram</a> - <a href="*">Twitter</a></p>
+            <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a href="https://www.instagram.com/" class="linkVisited">Instagram</a> - <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" class="linkVisited">Twitter</a></p>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
