--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="shortcut icon" href="recursos/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -38,40 +39,42 @@
             </div>
         </nav>
     </header>
+    
     <main>
         <section class="encabezado">
             <div class="encabezado__titulo">
                 <h1 class="encabezado__texto">ESTUDIO CONTABLE E IMPOSITIVO RODRIGUEZ SEGUER</h1>
             </div>
-        <section class="iconos">
-            <div class="iconos__card icono-rosa">
-                <i class="fa-solid fa-arrow-rotate-left iconogrande"></i>
-                <h2 class="iconos__texto">20 años de trayectoria</h2>
-            </div>
-            <div class="iconos__card icono-rosa">
-                <i class="fa-solid fa-angles-right iconogrande"></i>
-                <h2 class="iconos__texto">Celeridad y eficiencia</h2>
-            </div>
-            <div class="iconos__card icono-rosa">
-                <i class="fa-solid fa-book-bookmark iconogrande"></i>
-                <h2 class="iconos__texto">Certificaciones contables</h2>
-            </div>
-            <div class="iconos__card icono-rosa">
-                <i class="fa-solid fa-desktop iconogrande"></i>
-                <h2 class="iconos__texto">Servicios online</h2>
-            </div>
-        </section>
-        <section class="titulo">
-            <div class="titulo__nombrejefa"> Dra Graciela Seguer (UNlaM)</div>
-        </section>
-        <section class="video">
-            <iframe width="90%" height="400"src="https://www.youtube.com/embed/alb52LGzWtk"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+
+            <section class="iconos">
+                <div data-aos="zoom-in" class="iconos__card">
+                    <i class="fa-solid fa-arrow-rotate-left iconogrande"></i>
+                    <h2>20 años de trayectoria</h2>
+                </div>
+                <div data-aos="zoom-in" class="iconos__card">
+                    <i class="fa-solid fa-angles-right iconogrande"></i>
+                    <h2>Celeridad y eficiencia</h2>
+                </div>
+                <div data-aos="zoom-in" class="iconos__card">
+                    <i class="fa-solid fa-book-bookmark iconogrande"></i>
+                    <h2>Certificaciones contables</h2>
+                </div>
+                <div data-aos="zoom-in" class="iconos__card">
+                    <i class="fa-solid fa-desktop iconogrande"></i>
+                    <h2>Servicios online</h2>
+                </div>
+            </section>
+            <section class="titulo">
+                <div class="titulo__nombrejefa"> Dra Graciela Seguer (UNlaM)</div>
+            </section>
+            <section class="video">
+                <iframe width="90%" height="400"src="https://www.youtube.com/embed/alb52LGzWtk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </section>
-
     </main>
+    
     <footer>
         <div class="footer__infofinal">
             <p>Servicios Online-Sedes en CABA</p>
@@ -80,6 +83,11 @@
             <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a href="https://www.instagram.com/" class="linkVisited">Instagram</a> - <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" class="linkVisited">Twitter</a></p>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
