--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -36,13 +36,13 @@
   </header>
   
   <main>
-    <article>
-      <section class="mensajemotivador">
-        <h1 class="mensajemotivador__bienvenida">Estaremos encantados de atenderte</h1>
+    <article class="container mt-4">
+      <section>
+        <h1 class="text-center texto-rosa">Estaremos encantados de atenderte</h1>
       </section>
-      <section class="formulario mb-4">
-        <form class= "formulario__form"action="post">
-          <div class="formulario__uno">
+      <section class=" mb-4">
+        <form action="post">
+          <div>
             <div class="mb-4">
               <label for="nameInput" class="form-label">Nombre</label>
               <input type="text" class="form-control" id="nameInput" placeholder="Nombre">
@@ -59,14 +59,18 @@
             </div>
           </div>
 
-          <div class="formulario__dos mt-5">
+          <div class="mt-5">
             <label for="mensaje" class="mb-2">Inserte su mensaje aqui</label>
 
             <div class="form-floating">
-              <textarea class="form-control" placeholder="" id="floatingTextarea" style="height: 100px"></textarea>
+              <textarea class="form-control textarea" placeholder="" id="floatingTextarea" style="height: 100px"></textarea>
               <label for="floatingTextarea">Mensaje</label>
             </div>
-            <button type="submit" class="btn btn-primary mt-4 boton-rosa w-100">Siguiente</button>
+
+            <div class="my-4 w-100">
+              <button type="submit" class="btn btn-primary boton-rosa w-50">Siguiente</button>
+              <button type="submit" class="btn btn-primary boton-gradiente">Limpiar</button>
+          </div>
           </div>
 
       </section>
@@ -74,7 +78,7 @@
     </article>
   </main>
   
-  <footer class="fixed-bottom">
+  <footer class="footer">
     <div class="footer__infofinal">
         <p>Servicios Online-Sedes en CABA</p>
     </div>
