--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <title>Estudio Contable Rodriguez Seguer</title>
@@ -38,15 +39,15 @@
         </nav>
     </header>
     <main>
-        <section class="quienessomos">
+        <section class="quienessomos my-4">
             <article class="quienessomos__todos">
-                <h1 class="text-center m-0 h1 titulo-rosa"> QUIENES SOMOS?</h1>
+                <h1 class="text-center mb-4 h1 titulo-rosa"> QUIENES SOMOS?</h1>
 
 
                 <div class="container-fluid">
-                    <div class="quienessomos__contenido row gy-4">
+                    <div class="row gy-4">
                         <div class="quienessomos__foto col-12 col-md-6">
-                            <img src="../recursos/staff.jpeg" class="img-thumbnail img-size" alt="staff" srcset="">
+                            <img src="../recursos/staff.jpeg" class="img-thumbnail img-size" data-aos="flip-left" alt="staff" srcset="">
                         </div>
 
                         <div class="fs-5  col-12 col-md-6">
@@ -59,7 +60,7 @@
             </article>
         </section>
     </main>
-    <footer class="fixed-bottom">
+    <footer class="footer">
         <div class="footer__infofinal">
             <p>Servicios Online-Sedes en CABA</p>
         </div>
@@ -68,6 +69,10 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
