--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,36 +5,42 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="description" content="en esta seccion te podras comunicar con nosotros y realizar la consulta que necesites">
+  <meta name="keywords"  content="CONTACTO,NOMBRE,MAIL,MENSAJE,CONTACTARSE,PREGUNTAS,DUDAS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES"> 
+
   <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
-  <title>Estudio Contable Rodriguez Seguer</title>
+  <title>Contacto - Estudio Contable Rodriguez Seguer</title>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-2 fondo-rosa">
       <div class="container-fluid">
-          
-      <a class="navbar-brand" href="#"><img src="../recursos/favicon-16x16.png" width="25px" alt="logo estudio"></a>
-          
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
+        <a class="navbar-brand" href="../index.html"><img src="../recursos/EST.png" width="80px"
+            alt="logo estudio"></a>
 
-      <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-              <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
-              <a class="nav-link text-light" href="./servicios.html">Servicios</a>
-              <a class="nav-link text-light" href="./nosotros.html">Nosotros</a>
-              <a class="nav-link text-light" href="./acceso-clientes.html">Acceso clientes</a>
-              <a class="nav-link text-light" href="./contacto.html">Contactos</a>
+            <a class="nav-link text-light" href="./servicios.html">Servicios</a>
+            <a class="nav-link text-light" href="./nosotros.html">Nosotros</a>
+            <a class="nav-link text-light" href="./acceso-clientes.html">Acceso clientes</a>
+            <a class="nav-link text-light" href="./contacto.html">Contactos</a>
           </div>
-          </div>
+        </div>
       </div>
-  </nav>
+    </nav>
   </header>
-  
+
   <main>
     <article class="container mt-4">
       <section>
@@ -63,30 +69,36 @@
             <label for="mensaje" class="mb-2">Inserte su mensaje aqui</label>
 
             <div class="form-floating">
-              <textarea class="form-control textarea" placeholder="" id="floatingTextarea" style="height: 100px"></textarea>
+              <textarea class="form-control textarea" placeholder="" id="floatingTextarea"
+                style="height: 100px"></textarea>
               <label for="floatingTextarea">Mensaje</label>
             </div>
 
             <div class="my-4 w-100">
-              <button type="submit" class="btn btn-primary boton-rosa w-50">Siguiente</button>
+              <button type="submit" class="btn btn-primary boton-rosa w-50">Enviar</button>
               <button type="submit" class="btn btn-primary boton-gradiente">Limpiar</button>
-          </div>
+            </div>
           </div>
 
       </section>
       </form>
     </article>
   </main>
-  
+
   <footer class="footer">
     <div class="footer__infofinal">
-        <p>Servicios Online-Sedes en CABA</p>
+      <p>Servicios Online-Sedes en CABA</p>
     </div>
     <div class="footer__redes">
-      <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a href="https://www.instagram.com/" class="linkVisited">Instagram</a> - <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" class="linkVisited">Twitter</a></p>
-  </div>
+      <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a href="https://www.instagram.com/"
+          class="linkVisited">Instagram</a> - <a
+          href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D"
+          class="linkVisited">Twitter</a></p>
+    </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"></script>
 
 </body>
 
