--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -5,20 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="en esta seccion podras conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa como a los empleados">
+    <meta name="keywords" content="STAFF,JEFE,EMPLEADOS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Estudio Contable Rodriguez Seguer</title>
+    <title>Nosotros - Estudio Contable Rodriguez Seguer</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-2 fondo-rosa">
             <div class="container-fluid">
-
-                <a class="navbar-brand" href="#"><img src="../recursos/favicon-16x16.png" width="25px" alt="logo estudio"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../recursos/EST.png" width="80px"
+                        alt="logo estudio"></a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -28,7 +32,6 @@
 
                 <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
                         <a class="nav-link text-light" href="./servicios.html">Servicios</a>
                         <a class="nav-link text-light" href="./nosotros.html">Nosotros</a>
                         <a class="nav-link text-light" href="./acceso-clientes.html">Acceso clientes</a>
@@ -41,18 +44,25 @@
     <main>
         <section class="quienessomos my-4">
             <article class="quienessomos__todos">
-                <h1 class="text-center mb-4 h1 titulo-rosa"> QUIENES SOMOS?</h1>
+                <h1 class="text-center mb-4 h1 titulo-rosa nosotros-header"> QUIENES SOMOS?</h1>
 
 
                 <div class="container-fluid">
                     <div class="row gy-4">
                         <div class="quienessomos__foto col-12 col-md-6">
-                            <img src="../recursos/staff.jpeg" class="img-thumbnail img-size" data-aos="flip-left" alt="staff" srcset="">
+                            <img src="../recursos/staff.jpeg" class="img-thumbnail img-size" data-aos="flip-left"
+                                alt="staff" srcset="">
                         </div>
 
-                        <div class="fs-5  col-12 col-md-6">
+                        <div class="fs-5 col-12 col-md-6 my-auto">
                             <p> Mi nombre es Graciela, tengo 59 años, soy contadora de la
-                                UNLAM.Hace 20 años, me abri mi propio estudio contable,soy la responsable del area de asesoramiento y liquidacion de impuestos. Mi staff formado por Fernanda,Agustina y Julian son los que se encargan del area de regularizacion fiscal y por ultimo,Magali y Macarena componen el area de inspecciones y requerimientos. Cuento con un grupo de empleados sumamente eficientes y responsables a la hora de su realizar su trabajo. Todo mi equipo tiene mas de 3 años trabajando conmigo y construyendo este proyecto que soñe durante muchisimo tiempo.
+                                UNLAM.Hace 20 años, me abri mi propio estudio contable,soy la responsable del area de
+                                asesoramiento y liquidacion de impuestos. Mi staff formado por Fernanda,Agustina y
+                                Julian son los que se encargan del area de regularizacion fiscal y por ultimo,Magali y
+                                Macarena componen el area de inspecciones y requerimientos. Cuento con un grupo de
+                                empleados sumamente eficientes y responsables a la hora de su realizar su trabajo. Todo
+                                mi equipo tiene mas de 3 años trabajando conmigo y construyendo este proyecto que soñe
+                                durante muchisimo tiempo.
                             </p>
                         </div>
                     </div>
@@ -65,7 +75,10 @@
             <p>Servicios Online-Sedes en CABA</p>
         </div>
         <div class="footer__redes">
-            <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a href="https://www.instagram.com/" class="linkVisited">Instagram</a> - <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" class="linkVisited">Twitter</a></p>
+            <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a
+                    href="https://www.instagram.com/" class="linkVisited">Instagram</a> - <a
+                    href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D"
+                    class="linkVisited">Twitter</a></p>
         </div>
     </footer>
 
