perfeccione los cambios de seo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="nuestro inicio,con el nombre del estudio, el nombre de la contadora y jega del lugar y un breve video">
+    <meta name="description" content="Nuestro incio de bienvenida y prsentacion,con el nombre del estudio, el nombre de la contadora y jefa del lugar y un breve video">
     <meta name="keywords"  content="CONTADORA,UNLAM,ESTUDIO CONTABLE E IMPOSITIVO RODRIGUEZ SEGUER,EFICIENCIA,CELERIDAD,EFICACIA,SERVICIOS ONLINE,TRAYECTORIA,DRA,CERTIFICACIONES"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
