--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="en esta seccion podras conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa como a los empleados">
+    <meta name="description" content="En esta seccion podras conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa Graciela seguer contadora publica de la universidad UnLAM como a los empleados">
     <meta name="keywords" content="STAFF,JEFE,EMPLEADOS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
