--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="en esta seccion podras visualizar con una breve descripcion de los servicios que brindamos y nos especializamos al publico">
+    <meta name="description" content="En esta seccion podras visualizar  una breve descripcion de los servicios que brindamos y nos especializamos al publico; Asesoramiento y liquidacion de impuestos;Regularizacion fiscal;Inspecciones y requerimientos">
     <meta name="keywords" content="SERVICIOS,ASESORAMIENTO Y LIQUIDACIÓN DE IMPUESTOS,REGULARIZACION FISCAL,INSPECCION Y REQUERIMIENTOS,AGIP,AFIP,ARBA,IMPUESTOS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
 
     <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
