--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="En esta seccion podras conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa Graciela seguer contadora publica de la universidad UnLAM como a los empleados">
+    <meta name="description"
+        content="En esta seccion podrás conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa Graciela Seguer fundadora y contadora pública de la universidad UnLAM como a los empleados">
     <meta name="keywords" content="STAFF,JEFE,EMPLEADOS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -55,14 +56,14 @@
                         </div>
 
                         <div class="fs-5 col-12 col-md-6 my-auto">
-                            <p> Mi nombre es Graciela, tengo 59 años, soy contadora de la
-                                UNLAM.Hace 20 años, me abri mi propio estudio contable,soy la responsable del area de
-                                asesoramiento y liquidacion de impuestos. Mi staff formado por Fernanda,Agustina y
-                                Julian son los que se encargan del area de regularizacion fiscal y por ultimo,Magali y
-                                Macarena componen el area de inspecciones y requerimientos. Cuento con un grupo de
+                            <p> Mi nombre es Graciela, tengo 59 años, soy contadora de la UNLAM. Hace 20 años, me abrí
+                                mi propio estudio contable, soy la responsable del área de
+                                asesoramiento y liquidación de impuestos. Mi staff formado por Fernanda, Agustina y
+                                Julián son los que se encargan del área de regularización fiscal y por último, Magali y
+                                Macarena componen el área de inspecciones y requerimientos. Cuento con un grupo de
                                 empleados sumamente eficientes y responsables a la hora de su realizar su trabajo. Todo
-                                mi equipo tiene mas de 3 años trabajando conmigo y construyendo este proyecto que soñe
-                                durante muchisimo tiempo.
+                                mi equipo tiene más de 3 años trabajando conmigo y construyendo este proyecto que soñé
+                                durante muchísimo tiempo.
                             </p>
                         </div>
                     </div>
