--- a/paginas/acceso-clientes.html
+++ b/paginas/acceso-clientes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="En esta seccion podran acceder a su informacion personal solo los que sean clientes del estudio, en caso de aun no serlo,contactarse con nosotros para tramitar el acceso.">
+    <meta name="description" content="En esta sección podran acceder a su información personal solo los que sean clientes del estudio, en el caso de aún no serlo, hay que contactarse con nosotros para tramitar el acceso.">
     <meta name="keywords" content="CUIT,ACCESO,CLIENTES,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
 
     <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
