--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="en esta seccion te podras comunicar con nosotros y realizar la consulta que necesites,sacarte dudas e informarte sobre la inquietud que presentes, rapidamente estaremos contestandote por mail o si es necesario via whatsapp">
+  <meta name="description" content="En esta sección te podras comunicar con nosotros y realizar las consultas que necesites,sacarte dudas e informarte con mas profundidad sobre el servicio que desees tomar,rápidamente estaremos contestandote por mail o si es necesario via whatsapp">
   <meta name="keywords"  content="CONTACTO,NOMBRE,MAIL,MENSAJE,CONTACTARSE,PREGUNTAS,DUDAS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES"> 
 
   <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
