--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -56,7 +56,7 @@
 
   <!-- CONTENIDO PRINCIPAL -->
   <main>
-    <article class="contacto-container" mt-4">
+    <article class="contacto-container" mt-4>
 
       <!-- SECCION IZQUIERDA -->
       <section class="contacto-container__description">
