--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -61,7 +61,7 @@
                     a saber: Impuesto a las Ganancias, Bienes Personales y Renta Financiera o Impuesto Cedular, Impuesto
                     al Valor Agregado (IVA), Impuesto sobre los Ingresos Brutos, Tasas Municipales, Sellos, Autónomos y
                     Monotributo. Consultar por Trámite MiPyme y otros impuestos.</p>
-                <img class="infoservicios__img" src="../recursos/liqimpuestos.jpeg" />
+                <img class="infoservicios__img" src="../recursos/liqimpuestos.jpg" />
             </article>
 
             <article class="infoservicios__todosdos">
@@ -83,7 +83,7 @@
             </article>
         </section>
     </main>
-    <footer class="fixed-bottom">
+    <footer>
         <!-- FOOTER -->
         <div class="footer__redes">
             <p>
@@ -96,7 +96,7 @@
             </p>
         </div>
     </footer>
-    <!-- BOOTSTRAP-->
+    <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
