--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- METAINFORMACION (SEO) -->
-    <meta name="description"content="En esta seccion podrás conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa Graciela Seguer fundadora y contadora pública de la universidad UnLAM como a los empleados">
-    
+    <meta name="description"
+        content="En esta seccion podrás conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa Graciela Seguer fundadora y contadora pública de la universidad UnLAM como a los empleados">
+
     <meta name="keywords" content="STAFF,JEFE,EMPLEADOS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
     <!-- IMPORTAR BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -59,23 +60,22 @@
                 <div class="container-fluid">
                     <div class="row gy-4">
                         <div class="quienessomos__foto col-12 col-md-6">
-                            <img src="../recursos/staff.jpeg" class="img-thumbnail img-size" data-aos="flip-left"
+                            <img src="../recursos/satff.jpg" class="img-thumbnail img-size" data-aos="flip-left"
                                 alt="staff" srcset="">
                         </div>
 
-                        <div class="fs-5 col-12 col-md-6 my-auto">
+                        <div class="container-fluid__info fs-5 col-12 col-md-6 my-auto">
                             <p> Mi nombre es Graciela, tengo 59 años, soy contadora de la UNLAM. Hace 20 años, me abrí
                                 mi propio estudio contable, soy la responsable del área de
-                                asesoramiento y liquidación de impuestos. Mi staff formado por Fernanda, Agustina y
-                                Julián son los que se encargan del área de regularización fiscal y por último, Magali y
+                                asesoramiento y liquidación de impuestos. Mi staff formado por Fernanda y Agustina
+                                son las que se encargan del área de regularización fiscal. Magali y
                                 Macarena componen el área de inspecciones y requerimientos. Cuento con un grupo de
-                                empleados sumamente eficientes y responsables a la hora de su realizar su trabajo. Todo
+                                empleadas sumamente eficientes y responsables a la hora de su realizar su trabajo. Todo
                                 mi equipo tiene más de 3 años trabajando conmigo y construyendo este proyecto que soñé
                                 durante muchísimo tiempo. Como parte de su actualización permanente y atendiendo a las
                                 necesidades globales de las organizaciones, Rodriguez Seguer se encuentra inscripto en
                                 el Consejo Profesional de Ciencias Económicas de la Ciudad Autónoma de Buenos Aires
-                                como en el Consejo Profesional de Ciencias Económicas de Entre Ríos y en Instituciones
-                                Privadas.
+                                y en Instituciones Privadas.
                             </p>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="fixed-bottom">
+    <footer >
         <div class="footer__redes">
             <p>
                 <a href="https://es-la.facebook.com/" class="linkVisited"><i
