--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- METAINFORMACION (SEO) -->
-    <meta name="description"content="Nuestro incio y presentación,con el nombre del estudio, el nombre de la contadora y jefa del lugar y un breve video explicativo de como gestionar tu propio estudio contable.">
+    <meta name="description"content="Nuestro incio y presentación,con el nombre del estudio, de la contadora/jefa del lugar y un breve video explicativo de como gestionar tu propio estudio contable.">
 
     <meta name="keywords"content="CONTADORA,UNLAM,ESTUDIO CONTABLE E IMPOSITIVO RODRIGUEZ SEGUER,EFICIENCIA,CELERIDAD,EFICACIA,SERVICIOS ONLINE,TRAYECTORIA,DRA,CERTIFICACIONES">
     <!-- IMPORTAR FUENTES -->
